--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-		ここに
-
-
-        
-
+		ここに内容を入力
     <script src="js/scripts.js"></script>
 </body>
 </html>
