ヘッダー追加

--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>AboutMe</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
-		ここに内容を入力
+    <header class="page-header">
+        <h1 class="alingn-center">
+            <h2>私について</h2>
+        </h1>
+        <nav>
+            <ul class="main-nav font-english">
+                <li><a href="news.html">自己紹介</a></li>
+                <li><a href="menu.html">お問い合わせ</a></li>
+                <li><a href="ge-mu.html">ゲーム</a></li>
+            </ul>
+        </nav>
+    </header>
+		ここに内容を入
     <script src="js/scripts.js"></script>
 </body>
-</html>
+</html>                                      
