--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AboutMe</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>僕のポートフォリオ</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
+    
 </head>
-
 <body>
     <header class="page-header">
-        <h1 class="alingn-center">
-            <h2>私について</h2>
+        <h1 class="align-center darumadrop-one-regular">
+            わたしについて
         </h1>
         <nav>
-            <ul class="main-nav font-english">
-                <li><a href="news.html">自己紹介</a></li>
-                <li><a href="menu.html">お問い合わせ</a></li>
-                <li><a href="ge-mu.html">ゲーム</a></li>
+            <ul class="main-nav font-english align-center darumadrop-one-regular">
+                <li><a href="news.html">あばうとみー</a></li>
+                <li><a href="menu.html">おといあわせ</a></li>
+                <li><a href="ge-mu.html">げーむ</a></li>
             </ul>
         </nav>
     </header>
