--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="page-header">
         <h1 class="align-center darumadrop-one-regular">
-            わたしについて
+            わたし
         </h1>
         <nav>
             <ul class="main-nav font-english align-center darumadrop-one-regular">
