写真を丸くしたりフッターを作った リンク画像を設定した

--- a/ge-mu.html
+++ b/ge-mu.html
@@ -9,5 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
-    
+
 </head>
+<body>
+    <a href="https://www.streetfighter.com/6/ja-jp"class="link-image">
+        <img src="img/aaa.jpg" alt="いっちゃん" style="width:300px; height:auto;">
+    </a>
+    <header class="page-header">
+        <h1 class="align-center">
+            ゲーム
+        </h1>
+   
+    </header>
+		ここに内容を入
+    <script src="js/scripts.js"></script>
+</body>
+</html>  
