--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
     
 </head>
-<body>
+<body> 
+    <div class="footer">
+        &copy; 2024 Ryosei Horie.
+    </div>
+
+
     <header class="page-header">
         <h1 class="align-center darumadrop-one-regular">
             わたしについて
@@ -20,7 +25,7 @@
             <ul class="main-nav font-english align-center darumadrop-one-regular">
                 <li><a href="news.html">あばうとみー</a></li>
                 <li><a href="menu.html">おといあわせ</a></li>
-                <li><a href="ge-mu.html">げーむ</a></li>
+                <li><a href="ge-mu.html">しゅみ</a></li>
             </ul>
         </nav>
     </header>
