問い合わせホームを作った
特になし

--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
     
 </head>
 <body>
+<div class="cover cover-home">
     <header class="page-header">
         <h1 class="align-center darumadrop-one-regular">
             わたしのぽーとふぉりお
         </h1>
         <nav>
+        <h2>
             <ul class="main-nav font-english align-center darumadrop-one-regular">
                 <li><a href="news.html">あばうとみー</a></li>
                 <li><a href="menu.html">おといあわせ</a></li>
                 <li><a href="ge-mu.html">げーむ</a></li>
+                <li><a href="suitu.html">たべもの</a></li>
             </ul>
+        </h2>
         </nav>
     </header>
-		ここに内容を入
+		ここに内容を入ffjcsfkrfjgkksklksdskdfjfjfjjfjfjfjfjfjfjfjfjfjfjfjfjfjf
+
     <script src="js/scripts.js"></script>
 </body>
+</div>
 </html>                                      
