--- a/menu.html
+++ b/menu.html
@@ -8,13 +8,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="page-header">
-        <h1 class="align-center">
-            お問い合わせ
-        </h1>
-   
-    </header>
-		ここに内容を入
-    <script src="js/scripts.js"></script>
+    <div class="container">
+        <h1>お問い合わせフォーム</h1>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="name">お名前:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">メールアドレス:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">メッセージ:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div>
+            <button type="submit">送信</button>
+        </form>
+    </div>
 </body>
 </html>   
