ホームとお問い合わせフォームを作った

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     <header class="page-header">
         <div class="forest-background">
             <div class="intro-box">
-                <h1>ようこそ！</h1>
-                <p>私は[あなたの名前]です。</p>
+                <h1 style="font-size: 7.0rem;">ようこそ！</h1>
+                <p>私は堀江亮誠です。</p>
                 <p>自然が大好きで、特に森の中で過ごす時間が好きです。</p>
                 <nav>
                     <h2>
@@ -32,14 +32,10 @@
                         </ul>
                     </h2>
                 </nav>
-            </div>
-        </div>
-
-        
+            </div>  
     </header>
-		
-
-    <script src="js/scripts.js"></script>
+		<script src="js/scripts.js"></script>
 </body>
 </div>
-</html>                                      
+</html>
+    
