--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="forest-background">
             <div class="intro-box">
                 <h1>ようこそ！</h1>
-                <p>私は[あなたの名前]です。</p>
-                <p>自然が大好きで、特に森の中で過ごす時間が好きです。</p>
+                <h2>ほりえ　りょうせいです。</h2>
+                <h2>ゆる〜くみていってね</h2>
                 <nav>
                     <h2>
                         <ul class="main-nav font-english align-center darumadrop-one-regular">
