自己紹介を書いた

--- a/about.html
+++ b/about.html
@@ -9,30 +9,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
-    
 </head>
 <body>
-    <div class="footer">
+      <div class="footer">
         &copy; 2024 Ryosei Horie.
-    </div>
+      </div>
 
     <header class="page-header">
         <div class="forest-background">
             <div class="intro-box">
-                <h1 style="font-size: 7.0rem;">ようこそ！</h1>
-                <p>私は堀江亮誠です。</p>
-                <p>自然が大好きで、特に森の中で過ごす時間が好きです。</p>
-                <nav>
-                    <h2>
-                        <ul class="main-nav font-english align-center darumadrop-one-regular">
-                            <li><a href="about.html">あばうとみー</a></li>
-                            <li><a href="otoiawase.html">おといあわせ</a></li>
-                            <li><a href="ge-mu.html">げーむ</a></li>
-                            <li><a href="suitu.html">たべもの</a></li>
-                        </ul>
-                    </h2>
-                </nav>
-            </div>  
+                <h1 style="font-size: 7.0rem;">自己紹介</h1> 
+            <table class="info">
+              <tr>
+                <th>名前</th>
+                <td>堀江　凌世  </td>
+              </tr>
+              <tr>
+                <th>生年月日</th>
+                <td>2005年6月7日     </td>
+              </tr>
+              <tr>
+                <th>出身地</th>
+                <td>京都府京都市 </td>
+              </tr>
+              <tr>
+                <th>趣味</th>
+                <td>ゲーム、漫画、アニメ、寝ること</td>
+              </tr>
+              <tr>
+                <th>好きな食べ物</th>
+                <td>ラーメン、たこ焼き、プリン</td>
+              </tr>
+            </table>
+             </div> 
+        </div>
     </header>
 		<script src="js/scripts.js"></script>
 </body>
