メニューバーを作った

--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header class="aiu">
+     <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
+</header>
       <div class="footer">
         &copy; 2024 Ryosei Horie.
       </div>
@@ -44,6 +47,16 @@
              </div> 
         </div>
     </header>
+    <nav id="slide-menu" class="slide-menu">
+       <button class="close-btn" onclick="toggleMenu()">×</button>
+     <ul>
+           <li><a href="index.html">トップ</a></li>
+           <li><a href="about.html">あばうとみー</a></li>
+           <li><a href="otoiawase.html">おといあわせ</a></li>
+           <li><a href="ge-mu.html">げーむ</a></li>
+           <li><a href="suitu.html">たべもの</a></li>
+     </ul>
+    </nav>
 		<script src="js/scripts.js"></script>
 </body>
 </div>
