--- a/otoiawase.html
+++ b/otoiawase.html
@@ -23,6 +23,9 @@ background-image: url('/images/haikei.jpg'); /* 画像のパス */
     background-position: center; /* 画像を中央に配置 */
     background-repeat: no-repeat; 
 ">
+ <header class="aiu">
+     <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
+</header>
 <header class="page-header">
     <h1 class="align-centerr">
         お問い合わせフォーム
@@ -56,6 +59,19 @@ background-image: url('/images/haikei.jpg'); /* 画像のパス */
             &copy; 2024 Ryosei Horie.
         </footer>
     </div>
+
+    <nav id="slide-menu" class="slide-menu">
+         <button class="close-btn" onclick="toggleMenu()">×</button>
+        <ul>
+             <li><a href="index.html">トップ</a></li>
+             <li><a href="about.html">あばうとみー</a></li>
+             <li><a href="otoiawase.html">おといあわせ</a></li>
+             <li><a href="ge-mu.html">げーむ</a></li>
+             <li><a href="suitu.html">たべもの</a></li>
+        </ul>
+    </nav>
+    
+     <script src="js/scripts.js"></script>
 
 </body>
 </html>
