ゲームのところを作った

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
               </tr>
               <tr>
                 <th>趣味</th>
-                <td>ゲーム、漫画、アニメ、寝ること</td>
+                <td>ゲーム（スト6）、漫画、アニメ、寝ること</td>
               </tr>
               <tr>
                 <th>好きな食べ物</th>
