--- a/suitu.html
+++ b/suitu.html
@@ -14,25 +14,34 @@
     <header class="aiu">
         <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
    </header>
-   
+
    <header class="page-header">
     <div class="forest-background">
         <div class="intro-box">
-            <h1 style="font-size: 8rem;text-align: center;">ようこそ！</h1>
-            <h2>ほりえ　りょうせいです。</h2>
-            <h2>ゆる〜くみていってね</h2>
+            <h1 style="font-size: 8rem;text-align: center;">好きなものについて</h1>
+            <h2>ラーメン、たこ焼き、そばが好き
+            </h2>
+            <h2>甘いものも大体好き</h2>
             <p>
-              ストリートファイター6は、カプコンが開発した対戦型格闘ゲームです
-              。ストリートファイターシリーズの最新作で、2022年に発売されました。
-              私は、このゲームが大好きで、毎日のようにプレイしています。
-              私の好きなキャラクターは、いっちゃんです。
-              いっちゃんは、ストリートファイター6の新キャラクターで、
-             日本の剣術を使ったキャラクターです。
-             いっちゃんの必殺技は、剣を使った技で、とても強力です。
-             私は、いっちゃんの必殺技を使って、友達と対戦するのが楽しいです。
-             ストリートファイター6は、友達と対戦するのが楽しいゲームです。
-              私は、友達と対戦するのが好きで、毎日のように友達と対戦しています。
+                私がよく行くラーメン屋は、魁力屋です。
+                魁力屋のような味の濃いラーメンが好きです。
             </p>
+            <p>
+                たこ焼きは、家で作って食べたりします。
+                具材を変えていろいろな味を楽しめるので好きです
+                紅生姜は欠かせません。
+            </p>
+            <p>
+                そばは、冷たいのが好きです。
+                ざるそばが好きです。
+            </p>
+            <P>
+                甘いものは、やっぱりプリンかな〜
+            </P>
+            <h2>
+                オススメのおいしい所があればぜひ教えてください！
+            </h2>
+
         </div>
     </div>
 </header>
