--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="intro-box">
                 <h1 style="font-size: 8rem;text-align: center;">ようこそ！</h1>
                 <h2>ほりえ　りょうせいです。</h2>
-                <h2>ゆる〜くみていってね</h2>
+                <h2>ゆる〜くみていって〜</h2>
                 <nav>
                     <h2>
                         <ul class="main-nav font-english align-center darumadrop-one-regular">
