--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     
 </head>
 <body>
+ 
+
     <header class="aiu">
          <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
    </header>
     <div class="footer">
         &copy; 2024 Ryosei Horie.
     </div>
-
+<div id="main-content" class="hidden">
     <header class="page-header">
         <div class="forest-background">
             <div class="intro-box">
@@ -40,6 +42,7 @@
 
         
     </header>
+</div>
 	<nav id="slide-menu" class="slide-menu">
          <button class="close-btn" onclick="toggleMenu()">×</button>
         <ul>
