--- a/ge-mu.html
+++ b/ge-mu.html
@@ -64,7 +64,20 @@
     </a>
 </div>
     
-<div class="footer">
+<div style=" 
+    margin: 0;
+    padding: 0;
+    font-family: Darumadrop One, sans-serif;
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 30px 0;
+    font-size: 2.0rem;
+">
     &copy; 2024 Ryosei Horie.
 </div>
 
