--- a/otoiawase.html
+++ b/otoiawase.html
@@ -10,67 +10,54 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 </head>
-<body style="
-height: 100%;
-margin: 0;
-text-align: center;
-padding: 5px;
-display: flex;
-justify-content: center;
-align-items: center;
-background-image: url('/images/haikei.jpg'); /* 画像のパス */
-    background-size: cover; /* 画面全体に画像をフィットさせる */
-    background-position: center; /* 画像を中央に配置 */
-    background-repeat: no-repeat; 
-">
- <header class="aiu">
-     <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
-</header>
-<header class="page-header">
-    <h1 class="align-centerr">
-        お問い合わせフォーム
-    </h1>
-    <div class="otoi">
-    <div class="container">
+<body class="otoi">
+    <div class="contact-bg">
+        <header class="aiu">
+            <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
+        </header>
         <main>
-            <div class="signboard">
-                <form action="/images/ki.jpg" method="post" class="contact-form">
-                    <div class="form-group">
-                        <label for="name">なまえ:</label>
-                        <input type="text" id="name" name="name" required>
+            <h1 class="align-centerr">
+                お問い合わせフォーム
+            </h1>
+            <div class="contact">
+                <div class="container">
+                    <div class="signboard">
+                        <form action="/images/ki.jpg" method="post" class="contact-form">
+                            <div class="form-group">
+                                <label for="name">なまえ:</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">メールアドレス:</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">メッセージ:</label>
+                                <textarea id="message" name="message" rows="5" required></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit">おくる</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        <label for="email">メールアドレス:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">メッセージ:</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit">おくる</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </main>
-    </div>
-
         <footer class="footer">
             &copy; 2024 Ryosei Horie.
         </footer>
     </div>
 
     <nav id="slide-menu" class="slide-menu">
-         <button class="close-btn" onclick="toggleMenu()">×</button>
+        <button class="close-btn" onclick="toggleMenu()">×</button>
         <ul>
-             <li><a href="index.html">トップ</a></li>
-             <li><a href="about.html">あばうとみー</a></li>
-             <li><a href="otoiawase.html">おといあわせ</a></li>
-             <li><a href="ge-mu.html">げーむ</a></li>
-             <li><a href="suitu.html">たべもの</a></li>
+            <li><a href="index.html">トップ</a></li>
+            <li><a href="about.html">あばうとみー</a></li>
+            <li><a href="otoiawase.html">おといあわせ</a></li>
+            <li><a href="ge-mu.html">げーむ</a></li>
+            <li><a href="suitu.html">たべもの</a></li>
         </ul>
     </nav>
-    
      <script src="js/scripts.js"></script>
 
 </body>
