--- a/suitu.html
+++ b/suitu.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: wheat;">
     <header class="aiu">
         <button class="menu-toggle" onclick="toggleMenu()">☰ メニュー</button>
    </header>
@@ -45,6 +45,13 @@
         </div>
     </div>
 </header>
+
+<div class="container">
+    <img src="images/purinn.jpg" alt="画像" class="image">
+    <p class="text">皆さんはどんなプリンが好きですか？
+        <p>私はなるべく舌触りが滑らかで、キャラメルが少し苦めのプリンが好きです。</p>
+    </p>
+</div>
     
     
 <div class="footer">
