--- a/suitu.html
+++ b/suitu.html
@@ -48,9 +48,7 @@
 
 <div class="container">
     <img src="images/purinn.jpg" alt="画像" class="image">
-    <p class="text">皆さんはどんなプリンが好きですか？
-        <p>私はなるべく舌触りが滑らかで、キャラメルが少し苦めのプリンが好きです。</p>
-    </p>
+    <p class="text">皆さんはどんなプリンが好きですか？</p>
 </div>
     
     
