--- a/suitu.html
+++ b/suitu.html
@@ -46,9 +46,9 @@
     </div>
 </header>
 
-<div class="container">
-    <img src="images/purinn.jpg" alt="画像" class="image">
-    <p class="text">皆さんはどんなプリンが好きですか？</p>
+<div class="con">
+    <img src="images/purinn.jpg" alt="画像" class="imagee">
+    <p class="ttt">皆さんはどんなプリンが好きですか？</p>
 </div>
     
     
