写真をいっぱいならべた

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
- 
-
+    <div class="hero">
+        <img src="images/db6cda32-e5eb-47fc-933b-e7c54f1eaebc.jpg" alt="サンプル画像">
+        <h1>ようこそ！</h1>
+        <p>海外研修</p>
+    </div>
 
 
 <div id="main-content" class="hidden">
@@ -37,10 +40,26 @@
 
         
     </header>
+
+
+    <div class="photo-grid">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/fe2a4f55-0ce0-4ebf-b482-49db3b787bc9.jpg" alt="空と観覧車">
+        <img src="images/80158a7a-53de-4023-ab36-b967d241bb86.jpg" alt="コーヒーとケーキ">
+        <img src="images/1b84efb9-02da-422c-8d53-9cd4d70fa007.jpg" alt="猫">
+        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+    </div>
  
 </div>
 	<nav id="slide-menu" class="slide-menu">
-         <button class="close-btn" onclick="toggleMenu()">×</button>
+         <button class="close-btn" onclick="toggleMenu()"></button>
         <ul>
              <li><a href="index.html">トップ</a></li>
              <li><a href="about.html">あばうとみー</a></li>
