--- a/index.html
+++ b/index.html
@@ -12,67 +12,54 @@
 </head>
 <body>
     <div class="hero">
-        <img src="images/db6cda32-e5eb-47fc-933b-e7c54f1eaebc.jpg" alt="サンプル画像">
-        <h1>ようこそ！</h1>
-        <p>海外研修</p>
+        <div class="rounded-box">
+            <h1 class="title">海外研修 in ロサンゼルス</h1>
+        </div>
     </div>
 
 
 <div id="main-content" class="hidden">
     <header class="page-header">
-        <div class="forest-background">
+        <div class="nav-list">
             <div class="intro-box">
-                <h1 style="font-size: 8rem;text-align: center;">ようこそ！</h1>
-                <h2>ほりえ　りょうせいです。</h2>
-                <h2>ゆる〜くみていって〜</h2>
+                <h1 class="main-title">思い出に残ったこと2選</h1>
+                <h2 class="sub-title">1.アメリカの食事</h2>
+                <h2 class="sub-title">2.ジム先生の講演</h2>
                 <nav>
-                    <h2>
-                        <ul class="main-nav font-english align-center darumadrop-one-regular">
-                            <li><a href="about.html">あばうとみー</a></li>
-                            <li><a href="otoiawase.html">おといあわせ</a></li>
-                            <li><a href="ge-mu.html">げーむ</a></li>
-                            <li><a href="suitu.html">たべもの</a></li>
-                        </ul>
-                    </h2>
+                    <ul class="nav-menu">
+                        <li><a href="about.html">Food</a></li>
+                        <li><a href="kaigai.html">Lecture</a></li>
+                    </ul>
                 </nav>
             </div>
         </div>
+        
 
         
     </header>
 
 
     <div class="photo-grid">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
-        <img src="images/fe2a4f55-0ce0-4ebf-b482-49db3b787bc9.jpg" alt="空と観覧車">
-        <img src="images/80158a7a-53de-4023-ab36-b967d241bb86.jpg" alt="コーヒーとケーキ">
-        <img src="images/1b84efb9-02da-422c-8d53-9cd4d70fa007.jpg" alt="猫">
-        <img src="images/f2b6a4bf-7bd5-49e8-8259-d724635fe9e6.jpg" alt="足元の写真">
+        <img src="images/IMG_6177.JPG" alt="ターキーレッグ">
+        <img src="images/IMG_6169.JPG" alt="ポテト">
+        <img src="images/IMG_5914.jpeg" alt="インなうとバーガー">
+        <img src="images/IMG_5906.jpeg" alt="ワッフル">
+        <img src="images/IMG_5782.jpeg" alt="クラムチャウダー">
+        <img src="images/fd8f5cba-98a8-4942-927c-a6e78bb02b59.jpg" alt="うどん">
+        <img src="images/cdcf65b4-e29e-4c28-b400-8913b381c575.jpg" alt="バターヌードル">
+        <img src="images/IMG_5765.jpeg" alt="辛いチキン">
+        <img src="images/IMG_6186.JPG" alt="ハムサンド">
+        <img src="images/IMG_5828.jpeg" alt="ハワイアン">
+        <img src="images/IMG_5684.jpeg" alt="パンダエクスプレス">
+        <img src="images/IMG_6190.JPG" alt="朝ごはん">
     </div>
  
 </div>
-	<nav id="slide-menu" class="slide-menu">
-         <button class="close-btn" onclick="toggleMenu()"></button>
-        <ul>
-             <li><a href="index.html">トップ</a></li>
-             <li><a href="about.html">あばうとみー</a></li>
-             <li><a href="otoiawase.html">おといあわせ</a></li>
-             <li><a href="ge-mu.html">げーむ</a></li>
-             <li><a href="suitu.html">たべもの</a></li>
-        </ul>
-    </nav>
 
     <div class="container">
         <div class="section">
             <div class="content">
-                <img src="images/go.jpg" alt="サンプル画像">
+                <img src="images/IMG_5784.jpeg" alt="サンプル画像">
                 <div class="text">
                     <h2>タイトル</h2>
                     <p>ここに説明文を入れます。このテキストは写真の横に表示されます。</p>
