--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="intro-box">
                 <h1 class="main-title">思い出に残ったこと2選</h1>
                 <h2 class="sub-title">1.アメリカの食事</h2>
-                <h2 class="sub-title">2.ジム先生の講演</h2>
+                <h2 class="sub-title">2.様々な講演</h2>
                 <nav>
                     <ul class="nav-menu">
                         <li><a href="about.html">Food</a></li>
@@ -61,7 +61,7 @@
             <div class="content">
                 <img src="images/IMG_5784.jpeg" alt="サンプル画像">
                 <div class="text">
-                    <h2>タイトル</h2>
+                    <h2></h2>
                     <p>ここに説明文を入れます。このテキストは写真の横に表示されます。</p>
                 </div>
             </div>
