--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <div class="hero">
-        <div class="rounded-box">
-            <h1 class="title">海外研修 in ロサンゼルス</h1>
-        </div>
+        <h1>海外研修 in ロサンゼルス</h1>
     </div>
+    
 
 
 <div id="main-content" class="hidden">
