コメントした

--- a/index.html
+++ b/index.html
@@ -60,18 +60,24 @@
             <div class="content">
                 <img src="images/IMG_5784.jpeg" alt="サンプル画像">
                 <div class="text">
-                    <h2></h2>
-                    <p>ここに説明文を入れます。このテキストは写真の横に表示されます。</p>
+                    <h2>ピア39 クラムチャウダー</h2>
+                    <p>有名な店　ボーディン（BOUDIN）
+                        パンも、酸味があっておいしいです。もちもち食感です
+                    </p>
                 </div>
             </div>
         </div>
         <div class="section">
             <div class="content">
                 <div class="text">
-                    <h2>タイトル</h2>
-                    <p>ここに説明文を入れます。このテキストは写真の横に表示されます。</p>
+                    <h2>IN-N-OUT BURGER</h2>
+                    <p>日本に未上陸の超有名ハンバーガーショップです</p>
+                    <p>ハンバーガーメニューは三種類だけ</p>
+                    <p>・Double-Double $3.60（ダブル-ダブル）</p>
+                    <p>・Cheeseburger $2.50（チーズバーガー）</p>
+                    <p>・Hamburger $2.20 （ハンバーガー）</p>
                 </div>
-                <img src="images/haikei.jpg" alt="サンプル画像">
+                <img src="images/IMG_5914.jpeg" alt="サンプル画像">
             </div>
         </div>
     </div>
