--- a/kaigai.html
+++ b/kaigai.html
@@ -13,7 +13,7 @@
 <body>
     <div class="hero">
         <div class="rounded-box">
-            <h1 class="title">海外研修 in ロサンゼルス</h1>
+            <h1 class="title">研修の学び</h1>
         </div>
     </div>
 
@@ -22,15 +22,9 @@
     <header class="page-header">
         <div class="nav-list">
             <div class="intro-box">
-                <h1 class="main-title">思い出に残ったこと2選</h1>
-                <h2 class="sub-title">1.アメリカの食事</h2>
-                <h2 class="sub-title">2.様々な講演</h2>
-                <nav>
-                    <ul class="nav-menu">
-                        <li><a href="about.html">Food</a></li>
-                        <li><a href="kaigai.html">Lecture</a></li>
-                    </ul>
-                </nav>
+                <h1 class="main-title">印象に残った講演</h1>
+                <h2 class="sub-title">1.星先生</h2>
+                <h2 class="sub-title">2.ジム先生</h2>
             </div>
         </div>
         
@@ -45,20 +39,37 @@
     <div class="container">
         <div class="section">
             <div class="content">
-                <img src="images/IMG_5784.jpeg" alt="サンプル画像">
+                <img src="images/IMG_6192.JPG" alt="サンプル画像">
                 <div class="text">
-                    <h2>ピア39</h2>
-                    <p>ここに説明文を入れます。このテキストは写真の横に表示されます。</p>
+                    <h2>星まりこ先生</h2>
+                    <p>どうやって仕事をもらえるようにしたのか</p>
+                    <p>アメリカで大変だったこと</p>
+                    <p>アメリカでよかったこと</p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                 </div>
             </div>
         </div>
         <div class="section">
             <div class="content">
                 <div class="text">
-                    <h2>タイトル</h2>
-                    <p>ここに説明文を入れます。このテキストは写真の横に表示されます。</p>
+                    <h2>ジム先生</h2>
+                    <p>FLASH</p>
+                    <p>FOUCUS...</p>
+                    <p>ALIGN...</p>
+                    <p>START...</p>
+                    <p>HUSTLE...</p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                 </div>
-                <img src="images/haikei.jpg" alt="サンプル画像">
+                <img src="images/IMG_6187.jpg" alt="サンプル画像">
             </div>
         </div>
     </div>
