コメント追加

--- a/kaigai.html
+++ b/kaigai.html
@@ -60,10 +60,10 @@
                 <div class="text">
                     <h2>ジム先生</h2>
                     <p>FLASH</p>
-                    <p>FOUCUS...</p>
-                    <p>ALIGN...</p>
-                    <p>START...</p>
-                    <p>HUSTLE...</p>
+                    <p>FOUCUS...考え方を〜</p>
+                    <p>ALIGN...学びたいなら、、</p>
+                    <p>START...行動に移すことが大切</p>
+                    <p>HUSTLE...習慣</p>
                     <p></p>
                     <p></p>
                     <p></p>
